--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>Ansible Playbook Generator</h1>
-        <textarea id="prompt" placeholder="Describe what you want to generate with Ansible..."></textarea>
+        <textarea id="prompt" placeholder="Describe what you want to deploy with Ansible on an AWS EC2 machine..."></textarea>
         <button id="sendBtn">Send</button>
         <div class="status" id="status"></div>
     </div>
