--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <input
             type="password"
             id="apiKey"
-            placeholder="Enter your API key"
+            placeholder="Enter your AUTH key"
             autocomplete="off"
         />
 
